<resources>
    <string name="app_name">VlcFreemote</string>
    <string name="main_menu_title_dir_listing">Browse</string>
    <string name="main_menu_title_playlist">Playlist</string>
    <string name="dir_listing_current_path">Current path…</string>
    <string name="dir_listing_action_description">Append to playlist</string>
    <string name="dir_listing_onclick_action">File name - click to browse</string>
    <string name="dir_listing_file_or_directory_icon">File or directory icon</string>
    <string name="playlist_element_name_placeholder">File name</string>
    <string name="playlist_element_duration_placeholder">Duration</string>
    <string name="playlist_element_remove_from_playlist">Remove from playlist</string>
    <string name="status_vlc_cant_connect">Could not connect to VLC at %1$s. Please select a new server. %2$s</string>
    <string name="status_theme_apply_fail">Could not apply new theme. Will try after restart.</string>
    <string name="status_fatal_app_error">A fatal error was found when connecting to server %1$s. This typically means there is a bug in the application.</string>
    <string name="status_fatal_app_error_extra_info">Please submit a bug report. Additional information: %1$s</string>
    <string name="status_fatal_app_error_title">Application bug!</string>
    <string name="status_vlc_wrong_password">The supplied password is not valid</string>
    <string name="main_menu_title_servers">Servers</string>
    <string name="status_no_network_detected">VlcFreemote can\'t detect any networking interfaces configured in this device. Are you sure you are online?</string>
    <string name="server_select_current_server">VLC: %1$s</string>
    <string name="server_select_manual_selection_default_ip">192.168.1.</string>
    <string name="server_select_manual_selection_default_port">8080</string>
    <string name="server_select_manual_selection_set">Use this server…</string>
    <string name="server_select_manual_selection_label">Manually select server:</string>
    <string name="server_select_auto_selection_label">Use a server from the detected list:</string>
    <string name="server_select_manual_selection_default_ip_hint">Enter your server\'s IP address</string>
    <string name="server_select_manual_selection_default_port_hint">Enter your server\'s port</string>
    <string name="server_select_toggle_scanning_stop">Stop scanning…</string>
    <string name="server_select_toggle_scanning_start">Start scanning…</string>
    <string name="server_element_select_server_hint">Use this server</string>
    <string name="server_element_forget_lru_server_hint">Forget this server</string>
    <string name="server_element_rename_server_hint">Rename this server</string>
    <string name="wPlayer_Volume_Label">Volume</string>
    <string name="wPlayer_BtnNext">Play next</string>
    <string name="wPlayer_BtnPlayPause">Play/Pause</string>
    <string name="wPlayer_BtnPrev">Play previous</string>
    <string name="wPlayer_PlayPosition_JumpForward">Jump 20 seconds forward</string>
    <string name="wPlayer_PlayPosition_JumpBack">Jump 25 seconds back</string>
    <string name="wPlayer_CurrentlyPlaying">Currently playing…</string>
    <string name="server_select_request_password_dialog_title">Enter password…</string>
    <string name="server_select_request_name_dialog_title">Select name…</string>
    <string name="wPlayer_PlayPosition_CurrentPositionText">00:00</string>
    <string name="playlist_view_clear_playlist_button">Clear playlist</string>
    <string name="playlist_item_duration_unknown"> </string>
    <string name="playlist_view_refresh_playlist_button">Refresh playlist</string>
    <string name="wPlayer_ToggleMoreOptions">See more options</string>
    <string name="wPlayer_ToggleFullscreen">Toggle Fullscreen</string>
    <string name="wPlayer_AppInfoScreen">About this app…</string>
    <string name="wPlayer_SetTheme">Change theme</string>
    <string name="wPlayer_CycleAudioTrack">Cycle audio track</string>
    <string name="wPlayer_CycleSubtitleTrack">Cycle subtitle</string>
    <string name="playlist_element_current_status">Status for this playlist item</string>
    <string name="wDirListing_JumpToBookmark_label">Goto bookmark…</string>
    <string name="wDirListing_Bookmark_label">Bookmark location</string>
    <string name="wDirListing_ManageBookmark_label">Manage bookmarks</string>
    <string name="dir_listing_saved_bookmark">Saved bookmark %1$s</string>
    <string name="R.string.dir_listing_goto_bookmark_title">Jump to bookmark…</string>
    <string name="R_string_dir_listing_delete_bookmark_title">Pick a bookmark to delete</string>
    <string name="wPlayer_ExtraOptions_label">Extra options</string>
    <string name="wDirListing_AddRandom_label">Play random subdirectory</string>
    <string name="dir_listing_already_seen_icon">Video already seen</string>
    <string name="error_on_playlist_retrieve">Error retrieving playlist. Please try reconnecting.</string>
    <string name="playing_track_status">Track %1$d of %2$d</string>
    <string name="general_vlc_status">%1$s - %2$s</string>
    <string name="dir_listing_random_play_failed">Random directory selection failed</string>
    <string name="wPlayer_Open">Open VlcFreemote</string>
    <string name="server_select_lru_selection_label">Recently used servers</string>
    <string name="app_bug_try_ignore">Select new server</string>
    <string name="app_bug_submit_bug_report">Submit bug report</string>
    <string name="about_this_app_title">About VlcFreemote</string>
    <string name="about_this_app_goto_site">Goto project\'s site</string>
    <string name="about_this_app_body">VlcFreemote is open source! If you have suggestions, feature requests or bug reports please visit the project\'s website.</string>
    <string name="playlist_item_marked_as_unseen">Element removed from recently viewed history</string>
</resources>
