<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <ImageButton
        android:id="@+id/wPlaylistElement_CurrentStatus"
        android:layout_width="35dp"
        android:layout_height="fill_parent"
        android:visibility="invisible"
        android:contentDescription="@string/playlist_element_current_status"
        android:src="@android:drawable/ic_media_play"
        android:background="?android:selectableItemBackground"
        android:tint="@android:color/holo_blue_light" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/playlist_element_name_placeholder"
        android:id="@+id/wPlaylistElement_Name" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="fill_parent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/playlist_element_duration_placeholder"
        android:id="@+id/wPlaylistElement_Duration" />

    <ImageButton
        android:id="@+id/wPlaylistElement_Remove"
        android:layout_width="35dp"
        android:layout_height="fill_parent"
        android:contentDescription="@string/playlist_element_remove_from_playlist"
        android:src="@android:drawable/ic_menu_delete"
        android:background="?android:selectableItemBackground"
        android:tint="@android:color/holo_blue_light" />

</LinearLayout>
