<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <ImageView
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:id="@+id/wServerSelect_ServerTypeIcon"
        android:src="@mipmap/ic_vlc_icon" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/playlist_element_name_placeholder"
        android:id="@+id/wServerSelect_ScannedServerAddress" />

    <ImageButton
        android:id="@+id/wServerSelect_ServerRename"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/server_element_rename_server_hint"
        android:background="?android:selectableItemBackground"
        android:tint="@android:color/holo_blue_light"
        android:src="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/wServerSelect_ServerForget"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/server_element_forget_lru_server_hint"
        android:background="?android:selectableItemBackground"
        android:tint="@android:color/holo_blue_light"
        android:src="@android:drawable/ic_menu_delete" />

    <ImageButton
        android:id="@+id/wServerSelect_ScannedServerSelect"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/server_element_select_server_hint"
        android:background="?android:selectableItemBackground"
        android:tint="@android:color/holo_blue_light"
        android:src="@android:drawable/ic_menu_send" />

</LinearLayout>
