<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/wMiniPlayerController_Open"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/wPlayer_Open"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center"
        android:background="?android:selectableItemBackground" />

    <ImageButton
        android:id="@+id/wMiniPlayerController_BtnPlayPause"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/wPlayer_BtnPlayPause"
        android:src="@android:drawable/ic_media_play"
        android:layout_gravity="center"
        android:background="?android:selectableItemBackground"
        android:tint="@android:color/holo_blue_light" />

    <ImageButton
        android:id="@+id/wMiniPlayerController_BtnNext"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/wPlayer_BtnNext"
        android:src="@android:drawable/ic_media_next"
        android:layout_gravity="center"
        android:background="?android:selectableItemBackground"
        android:tint="@android:color/holo_blue_light" />

</LinearLayout>